scripts/tests/errors/err_func_no_body.bu
// BAD: function with no body, then a while loop
def broken()

while (true) {
    break;
}
print("should not reach here");
